# string-cal

./: .gitignore  CMakeLists.txt
Code/: CMakeLists.txt  input.cpp  iotest.cpp
Code/CommandLineApps/: CMakeLists.txt  input.cpp
Code/Lib/: CMakeLists.txt  gas.cpp  generator.h  shuntingYard.cpp  shuntingYard.h
Testing/: CMakeLists.txt  CatchMain.cpp  CatchMain.h  inputParserTest.cpp
